wow I am adding second comment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 
-    <head>T</head>
+    <head>first commit</head>
     <body>
-        <div></div>
+        <h1>Innitial Commit</h1>>
+        <h2>
+            I amusing git bash for first time
+        </h2>
     </body>
 </html>
