--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
     <head>first commit</head>
     <body>
         <h1>Innitial Commit</h1>>
-        <h2>
-            I amusing git bash for first time
-        </h2>
+        <h2>I amusing git bash for first time</h2>
     </body>
 </html>
